--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ table, th, td {
 </div>
 
 <div id="bottomlayout">
-    <p>&copy; work by Ali Shazin</p>
+    <p>&copy; bmicalculator</p>
 </div>
 <script>
 function computeBMI() {
