--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ h1 {
     width: 250px;
     height: 350px;
     margin: auto;
-    background: gainsboro;
-    border: 2px solid grey;
+    background-color: white;
+    border: 2px solid orangered;
     border-radius: 20px;
 }
 .textfield {
@@ -59,13 +59,14 @@ table, th, td {
 #bottomlayout {
     text-align: center;
     padding: 5px;
-    background-color: gainsboro;
+    background-color: white;
     margin-top: 20px;
     border-radius: 10px;
+    border: 2px solid orangered;
 }
 </style>
 </head>
-<body>
+<body style="background-color: gainsboro;">
 
 <h1>BMI Calculator</h1>
 
