--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ table, th, td {
 <h1>BMI Calculator</h1>
 
 <div class="content" align="center">
-<input type="number" class="textfield" id="height" placeholder="Enter height(cm)" title="height(cm)" size="20">
-<input type="number" class="textfield" id="weight" placeholder="Enter weight(kg)" title="weight(kg)" size="20">
+<input type="number" class="textfield" id="height" placeholder="Enter height(cm)" title="height(cm)" size="20"><br>
+<input type="number" class="textfield" id="weight" placeholder="Enter weight(kg)" title="weight(kg)" size="20"><br>
 <button id="bmibutt" onclick="computeBMI()">Compute BMI</button>
 <table>
     <tr id="under">
