--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="author" content="Ali Shazin">
 <meta name="keywords" content="HTML,CSS,JavaScript">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" type="image/png" href="icon.PNG">
 <style>
 h1 {
     padding: 20px;
