--- a/index.html
+++ b/index.html
@@ -1,146 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="BMI Calculator">
+<title>Calculator</title>
+<meta name="description" content="Calculator">
 <meta name="author" content="Ali Shazin">
-<meta name="keywords" content="BMI, bmi, health check, weight loss, skinny">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/png" href="icon.PNG">
-<style>
-h1 {
-    padding: 20px;
-    background-color: orangered;
-    color: white;
-    border-radius: 10px;
-}
-.content {
-    width: 250px;
-    height: 350px;
-    margin: auto;
-    background-color: white;
-    border: 2px solid orangered;
-    border-radius: 20px;
-}
-.textfield {
-    margin-top: 20px;
-    height: 20px;
-    text-indent: 5px;
-}
-.textfield:focus {
-    border: 2px solid blue;
-}
-#bmibutt {
-    height: 35px;
-    background-color: red;
-    color: white;
-    border: 1px solid black;
-    margin-top: 20px;
-}
-#bmibutt:hover {
-    background-color: tomato;
-    cursor: pointer;
-}
-#bmibutt:active {
-    border: none;
-}
-table {
-    margin-top: 20px;
-}
-th, td {
-    padding: 5px;
-} 
-table, th, td {
-    border: 2px solid black;
-    border-collapse: collapse;
-}
-.Result {
-    margin-top: 15px;
-}
-#bottomlayout {
-    text-align: center;
-    padding: 5px;
-    background-color: white;
-    margin-top: 20px;
-    border-radius: 10px;
-    border: 2px solid orangered;
-}
-</style>
+<link rel="shortcut icon" type="image/ico" href="icon.ico">
+<link rel='stylesheet' href="style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
-<body style="background-color: gainsboro;">
-
-<h1>BMI Calculator</h1>
-
-<div class="content" align="center">
-<input type="number" class="textfield" id="height" placeholder="Enter height(cm)" title="height(cm)" size="20"><br>
-<input type="number" class="textfield" id="weight" placeholder="Enter weight(kg)" title="weight(kg)" size="20"><br>
-<button id="bmibutt" onclick="computeBMI()">Compute BMI</button>
-<table>
-    <tr id="under">
-        <th>&lt;18.5</th>
-        <td>Under Weight</td>
-    </tr>
-    <tr id="normal">
-        <th>18.5-24.9</th>
-        <td>Normal Weight</td>
-    </tr>
-    <tr id="over">
-        <th>25-29.9</th>
-        <td>Over Weight</td>
-    </tr>
-    <tr id="obese">
-        <th>&gt;30</th>
-        <td>Obese</td>
-    </tr>
-</table>
-<label class="Result" for="result">Result:</label>
-<input type="text" id="result" size="4" style="font-weight: bold;" class="Result" readonly>
-</div>
-
-<div id="bottomlayout">
-    <p>&copy; bmicalculator</p>
-</div>
-<script>
-function computeBMI() {
-    clearColor(0)
-    var height = document.getElementById("height").value;
-    var weight = document.getElementById("weight").value;
-    if (height > 0 && weight > 0) {
-        var result_space = document.getElementById("result");
-        var heightby100 = height/100; 
-        var result = (weight / heightby100 * 1 / heightby100).toFixed(1);
-        if (result > 0 && result != Infinity) {
-            if (result < 18.5) {
-                document.getElementById("under").style.color = 'red';
-            } else if (result<=25) {
-                document.getElementById("normal").style.color = 'red';
-            } else if (result<=30) {
-                document.getElementById("over").style.color = 'red';
-            } else if (result>30) {
-                document.getElementById("obese").style.color = 'red';
-            }
-        } else {
-            clearColor(1);
-            return;
-        }
-        result_space.value = result;
-        }
-    else {
-        clearColor(1);
-        return;
-    }
-}
-function clearColor(instance) {
-    if (instance == 1) {
-        alert("Invalid input!")
-    } 
-    document.getElementById("under").style.color = 'black'; 
-    document.getElementById("normal").style.color = 'black';
-    document.getElementById("over").style.color = 'black';
-    document.getElementById("obese").style.color = 'black';
-    document.getElementById("result").value = ''
-}
-</script>
-
+<body>
+    <div class="container">
+        <div class="textfield">
+            <div class="top-text"></div>
+            <div class="bottom-text"><div></div></div>
+        </div>
+        <div class="keys">
+            <div class="top-row" id="ce" onclick="clearLatest()"><span>CE</span></div>
+            <div class="top-row" id="c" onclick="clearAll()">C</div>
+            <div class="top-row" id="pie" onclick="enterDigit('π')">π</div>
+            <div class="top-row" id="backspace" onclick="backspaceDigit()"><i class="bi bi-backspace"></i></div>
+            <div class="operators" id="dot" onclick="enterDigit('.')"><span>.</span></div>
+            <div class="operators" id="x-raise-y" onclick="enterDigit('^')"><p>x<sup>y</sup></p></div>
+            <div class="operators" id="x-raise-2" onclick="enterDigit('^2')"><p>x<sup>2</sup></p></div>
+            <div class="operators" id="division" onclick="enterDigit(` ${this.children[0].innerHTML} `), splitDigits(`${this.children[0].innerHTML}`)"><span>÷</span></div>
+            <div class="numbers" id="seven" onclick="enterDigit(`${this.innerHTML}`)">7</div>
+            <div class="numbers" id="eight" onclick="enterDigit(`${this.innerHTML}`)">8</div>
+            <div class="numbers" id="nine" onclick="enterDigit(`${this.innerHTML}`)">9</div>
+            <div class="operators" id="multiplication" onclick="enterDigit(` ${this.children[0].innerHTML} `), splitDigits(`${this.children[0].innerHTML}`)"><span>x</span></div>
+            <div class="numbers" id="four" onclick="enterDigit(`${this.innerHTML}`)">4</div>
+            <div class="numbers" id="five" onclick="enterDigit(`${this.innerHTML}`)">5</div>
+            <div class="numbers" id="six" onclick="enterDigit(`${this.innerHTML}`)">6</div>
+            <div class="operators" id="subtraction" onclick="enterDigit(` ${this.children[0].innerHTML} `), splitDigits(`${this.children[0].innerHTML}`)"><span>-</span></div>
+            <div class="numbers" id="one" onclick="enterDigit(`${this.innerHTML}`)">1</div>
+            <div class="numbers" id="two" onclick="enterDigit(`${this.innerHTML}`)">2</div>
+            <div class="numbers" id="three" onclick="enterDigit(`${this.innerHTML}`)">3</div>
+            <div class="operators" id="addition" onclick="enterDigit(` ${this.children[0].innerHTML} `), splitDigits(`${this.children[0].innerHTML}`)"><span>+</span></div>
+            <div class="operators" id="parenthesis">
+                <div class="operators" id="left-parenthesis" onclick="enterDigit(`${this.innerHTML}`)">(</div>
+                <div class="operators" id="right-parenthesis" onclick="enterDigit(`${this.innerHTML}`)">)</div>
+            </div>
+            <div class="numbers" id="zero" onclick="enterDigit(`${this.innerHTML}`)">0</div>
+            <div class="equals" id="equals" onclick="solveEquals()"><span>=</span></div>
+        </div>
+    </div>
+    <script>
+        const script = document.createElement('script');
+        script.src = 'script.js';
+        document.head.appendChild(script);
+    </script>
 </body>
 </html>
